--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body{
 .card{
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(132deg, #00feba, #5b548a);
+    /* ver como hacer que el fondo cambie dependiendo del clima */
+    background: linear-gradient(132deg, #468189, #f3eec3); 
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
@@ -53,4 +54,11 @@ body{
 .search button img{
     width: 16px;
 }
+
+.weather-icon{
+    width: 170px;
+    margin-top: 30px;
+}
+
+
 
