--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +16,7 @@ body{
     width: 90%;
     max-width: 470px;
     /* ver como hacer que el fondo cambie dependiendo del clima */
-    background: linear-gradient(132deg, #468189, #f3eec3); 
+    background: linear-gradient(132deg, #f3eec3, #468189); 
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
@@ -60,5 +63,40 @@ body{
     margin-top: 30px;
 }
 
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2{
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+
+}
+
+.col img{
+    width: 40px;
+    margin-right: 10px;
+}
+
+.humidity, .wind{
+    font-size: 28px;
+    margin-top: -6px;
+}
 
 
