--- a/style.css
+++ b/style.css
@@ -99,4 +99,14 @@ body{
     margin-top: -6px;
 }
 
+.weather{
+    display: none;
+}
 
+.error{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    color: #e63946;
+}
